vision section added

--- a/index.html
+++ b/index.html
@@ -67,11 +67,26 @@
 <div class="sub-contenar">
 <div class="main-1">
   <img src="./assets/card-icon.png">
-  <h2 class="main-heading">Digital Transformation</h2>
+  <h2 class="disetal">Digital Transformation</h2>
   <p class="main-title">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
 <button class="main-btn">Learn More</button>
 </div>
 
+
+  <div class="main-2">
+    <img src="./assets/card-icon.png">
+    <h2 class="disetal">Green Energy</h2>
+    <p class="main-title">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+  <button class="main-btn2">Learn More</button>
+  </div>
+
+
+    <div class="main-3">
+      <img src="./assets/card-icon.png">
+      <h2 class="disetal">Green Energy</h2>
+      <p class="main-title">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+    <button class="main-btn3">Learn More</button>
+    </div>
 
 </div>
 </div>
