dr yunus section added

--- a/index.html
+++ b/index.html
@@ -1,95 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--font link-->
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="style.css">
- <title>My First Assignment</title>
-</head>
-<body>
-<header>
- <!--navbar design-->
- <nav class="navbar">
-<h1 class="first-heading">Bangladesh 2.0</h1>
-<button class="sign-btn">sign in</button>
- </nav>
- <!--banner design-->
- <section class="banner">
-  <div class="left-side">
-<p class="bangla">Bangladesh 2.0</p>
-<h1 class="banner-title">Idea , innovation ,
- <br>vision and challenges in<br> New Bangladesh.</h1>
- <button class="banner-btn">Explore New Bangladesh</button>
-</div>
-<div class="right-side">
-<img src="./assets/hero.png">
-</div>
- </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--font link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>My First Assignment</title>
+  </head>
+  <body>
+    <header>
+      <!--navbar design-->
+      <nav class="navbar">
+        <h1 class="first-heading">Bangladesh 2.0</h1>
+        <button class="sign-btn">sign in</button>
+      </nav>
+      <!--banner design-->
+      <section class="banner">
+        <div class="left-side">
+          <p class="bangla">Bangladesh 2.0</p>
+          <h1 class="banner-title">
+            Idea , innovation , <br />vision and challenges in<br />
+            New Bangladesh.
+          </h1>
+          <button class="banner-btn">Explore New Bangladesh</button>
+        </div>
+        <div class="right-side">
+          <img src="./assets/hero.png" />
+        </div>
+      </section>
 
- <!--pillars of bd section-->
- <div class="terget-contenar">
-  <h1 class="box-title">Pillars of "Bangladesh 2.0"</h1>
-<div class="box-contenar">
- <div class="box-1">
-  <img src="./assets/card-icon.png">
-  <h3 class="heading">Innovation</h3>
-  <p class="title">How are innovators making our lives healthier, safer, and more comfortable?</p>
- </div>
- <div class="box-2">
-  <img src="./assets/card-icon.png">
-  <h3 class="heading">Sustainability</h3>
-  <p class="title"> "Sustain" means to last over time, so sustainability is the ability of something</p>
- </div>
- 
- <div class="box-3">
-  <img src="./assets/card-icon.png">
-  <h3 class="heading">Infrastructure</h3>
-  <p class="title">IT infrastructure, also called technology infrastructure, is what.</p>
- </div>
- <div class="box-4">
-  <img src="./assets/card-icon.png">
-  <h3 class="heading">Infrastructure</h3>
-  <p class="title">Empowerment is the practice of motivating yourself or others</p>
- </div>
-</div>
- </div>
-</header>
-<main>
-  <!-- The Vision of Future section -->
-<div class="main-contenar">
- <h2 class="main-heading">The Vision of Future</h2>
- <p class="main-dec">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+      <!--pillars of bd section-->
+      <div class="terget-contenar">
+        <div class="content-wrapper">
 
-<div class="sub-contenar">
-<div class="main-1">
-  <img src="./assets/card-icon.png">
-  <h2 class="disetal">Digital Transformation</h2>
-  <p class="main-title">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-<button class="main-btn">Learn More</button>
-</div>
+        
+        <h1 class="box-title">Pillars of "Bangladesh 2.0"</h1>
+        <div class="box-contenar">
+          <div class="box-1">
+            <img src="./assets/card-icon.png" />
+            <h3 class="heading">Innovation</h3>
+            <p class="title">
+              How are innovators making our lives healthier, safer, and more
+              comfortable?
+            </p>
+          </div>
+          <div class="box-2">
+            <img src="./assets/card-icon.png" />
+            <h3 class="heading">Sustainability</h3>
+            <p class="title">
+              "Sustain" means to last over time, so sustainability is the
+              ability of something
+            </p>
+          </div>
 
+          <div class="box-3">
+            <img src="./assets/card-icon.png" />
+            <h3 class="heading">Infrastructure</h3>
+            <p class="title">
+              IT infrastructure, also called technology infrastructure, is what.
+            </p>
+          </div>
+          <div class="box-4">
+            <img src="./assets/card-icon.png" />
+            <h3 class="heading">Infrastructure</h3>
+            <p class="title">
+              Empowerment is the practice of motivating yourself or others
+            </p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </header>
+    <main>
+      <!-- The Vision of Future section -->
+      <div class="main-contenar">
+        <h2 class="main-heading">The Vision of Future</h2>
+        <p class="main-dec">
+          Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+          cutting-edge technology, promoting inclusive growth, and ensuring
+          sustainability. With initiatives in renewable energy, digital
+          transformation, and robust infrastructure, the country is set to
+          become a global model of development.
+        </p>
 
-  <div class="main-2">
-    <img src="./assets/card-icon.png">
-    <h2 class="disetal">Green Energy</h2>
-    <p class="main-title">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
-  <button class="main-btn2">Learn More</button>
-  </div>
+        <div class="sub-contenar">
+          <div class="main-1">
+            <img src="./assets/card-icon.png" />
+            <h2 class="disetal">Digital Transformation</h2>
+            <p class="main-title">
+              Creating a nationwide digital ecosystem to enhance connectivity
+              and access to services for all citizens.
+            </p>
+            <button class="main-btn">Learn More</button>
+          </div>
 
+          <div class="main-2">
+            <img src="./assets/card-icon.png" />
+            <h2 class="disetal">Green Energy</h2>
+            <p class="main-title">
+              Investments in solar and wind energy to ensure a sustainable and
+              eco-friendly future.
+            </p>
+            <button class="main-btn2">Learn More</button>
+          </div>
 
-    <div class="main-3">
-      <img src="./assets/card-icon.png">
-      <h2 class="disetal">Green Energy</h2>
-      <p class="main-title">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
-    <button class="main-btn3">Learn More</button>
-    </div>
-
-</div>
-</div>
-</main>
-</body>
+          <div class="main-3">
+            <img src="./assets/card-icon.png" />
+            <h2 class="disetal">Green Energy</h2>
+            <p class="main-title">
+              Investments in solar and wind energy to ensure a sustainable and
+              eco-friendly future.
+            </p>
+            <button class="main-btn3">Learn More</button>
+          </div>
+        </div>
+      </div>
+      <div class="dr-yunus">
+        <p class="yunus-p">
+          Dr. Muhammad Yunus is a Bangladeshi social entrepreneur, economist,
+          and founder of the Grameen Bank. Known as the "Father of
+          Microfinance," he developed a revolutionary system of lending small
+          amounts of money to impoverished individuals without collateral,
+          enabling them to start or expand small businesses. Born on June 28,
+          1940, in Chittagong, Bangladesh, Dr. Yunus earned his Ph.D. in
+          Economics from Vanderbilt University. He returned to Bangladesh in the
+          1970s and initiated experiments with microcredit, which evolved into
+          the Grameen Bank in 1983.In 2006, Dr. Yunus and the Grameen Bank were
+          jointly awarded the Nobel Peace Prize for their efforts to combat
+          poverty through inclusive economic opportunities.
+        </p>
+        <h1 class="yunus-h">Dr. Muhammad Yunus</h1>
+        <p class="yunus-last">
+          Chief Adviser of the People's Republic of Bangladesh
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
